chore: enable cross-origin cloud domains and dynamic API base URL for deployment